[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "stpm"
version = "0.1.0"
description = "SmartThings Prometheus Metrics"
authors = ["Clark Perkins <r.clark.perkins@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

click = "*"
prometheus-client = "*"
pysmartthings = "*"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
mypy = "*"
pylint = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-mock = "*"

[tool.poetry.scripts]
stpm = 'stpm.cli:main'

[tool.isort]
profile = "black"
skip_gitignore = true
