[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "shm"
version = "0.0.0"
description = "Smart Home Prometheus Metrics"
authors = ["Clark Perkins <r.clark.perkins@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

click = "*"
colorlog = "*"
prometheus-client = "*"
pyecobee = "*"
pysmartthings = "*"
pyyaml = "*"
uvicorn = "*"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
mypy = "*"
pylint = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-mock = "*"
types-pyyaml = "*"

[tool.poetry.scripts]
shm = 'shm.cli:main'


[tool.coverage.run]
branch = true
relative_files = true

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
]

ignore_errors = true

[tool.coverage.html]
directory = "reports/coverage/html"
title = "shm coverage"

[tool.coverage.xml]
output = "reports/coverage/coverage.xml"


[tool.isort]
profile = "black"
skip_gitignore = true


[[tool.mypy.overrides]]
module = [
    "pyecobee",
    "pysmartthings",
    "uvicorn",
]
ignore_missing_imports = true
